# ChangeLog for dev-libs/libassuan
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libassuan/ChangeLog,v 1.2 2004/02/28 07:56:20 vapier Exp $

*libassuan-0.6.4 (28 Feb 2004)

  28 Feb 2004; Mike Frysinger <vapier@gentoo.org> :
  Version bumpage.

*libassuan-0.6.2 (06 Jan 2004)

  06 Jan 2004; Tavis Ormandy <taviso@gentoo.org> libassuan-0.6.2.ebuild:
  Initial import
