@@ -1,5 +1,7 @@
-MD5 9a906ee3977f8f5e815569ae8fd8d056 files/digest-libassuan-0.6.2 67
-MD5 90eb33ade8aa7d88927db4aa64468bc6 files/digest-libassuan-0.6.4 67
+MD5 4a8ff8c4459e2172d8d8d544998ff097 libassuan-0.6.4.ebuild 562
+MD5 4a8ff8c4459e2172d8d8d544998ff097 libassuan-0.6.5.ebuild 562
 MD5 990b7b07a5305adcfe77e23e76e075c0 ChangeLog 445
 MD5 ce62c4e94f5ec16e955b8aaf4dfed196 libassuan-0.6.2.ebuild 545
-MD5 4a8ff8c4459e2172d8d8d544998ff097 libassuan-0.6.4.ebuild 562
+MD5 9a906ee3977f8f5e815569ae8fd8d056 files/digest-libassuan-0.6.2 67
+MD5 90eb33ade8aa7d88927db4aa64468bc6 files/digest-libassuan-0.6.4 67
+MD5 3be340d734ec0f4d8c8eb662a3921cac files/digest-libassuan-0.6.5 67
