@@ -1,0 +1,1 @@
+MD5 494a238b8f573752f7f13485c0146007 libassuan-0.6.5.tar.gz 233949
