@@ -1,6 +1,11 @@
 # ChangeLog for dev-libs/libassuan
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/libassuan/ChangeLog,v 1.2 2004/02/28 07:56:20 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/libassuan/ChangeLog,v 1.3 2004/05/05 17:24:03 taviso Exp $
+
+*libassuan-0.6.5 (05 May 2004)
+
+  05 May 2004; Tavis Ormandy <taviso@gentoo.org> libassuan-0.6.5.ebuild:
+  bump
 
 *libassuan-0.6.4 (28 Feb 2004)
 
